--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<head>
 		
 		<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-	    <meta charset"UFT-8"/>
+	    	<meta charset"UFT-8"/>
 		<meta name="author" content="Liisi Korvenranta"/>
 		<meta name="description" content="Kampanjasivut"/>
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<link rel="shortcut icon" href="favicon.ico"/> 
-		<title>Ydinvoiman puolesta</title>
+		<title> Ydinvoiman puolesta </title>
 		<link rel = "stylesheet" type="text/css" href="stylesheet.css">
 		
 	</head>
@@ -17,32 +18,48 @@
 		
 			<nav class="navigation">
 				<ul>
-					<li>Home</li>
-					<li><a href="#image1">Info</a> </li>
-					<li>Contact</li>
+					<li><a href="#home">HOME</a> </li>
+					<li><a href="#info">INFO</a> </li>
+					<li><a href="#blog1">BLOG</a> </li>
+					<li><a href="#footer">CONTACT</a> </li>
 				</ul>	
 			</nav>
 		
 			<header class="title">
-				<img class="resize" src="tree.jpg" width="1000px">
-				<img id="image1" class="resize" src="lights1.jpg" width="1000px">
+				<img id="home" class="resize" src="tree.jpg" >
+				<img id="info" class="resize" src="lights1.jpg">
 			</header>
 			
 			<section>
-				<article id="first" class="blogpost">
-					<h2>Blogiteksti</h2>
-					<p> Apinat on kivoja jeeeee!</p>										
+				<article id="blog1" class="blogpost">
+					<h2>Miksi Ydinvoima?</h2>
+					<p> Kokoomusnuorten lähtökohtainen tavoite on tuottaa kotimaista päästötöntä ydinvoimaa ilmastoa
+ 					   saastuttavien fossiilisten polttoaineiden sijaan. Haluamme täten päästä eroon Venäjän tuontiriippuvuudesta ja ilmastoa saastuttavista
+ 					   energiamuodoista. Tämän tavoitteen saavuttamiseksi Suomeen tulee rakentaa kaksi uutta yksityisesti rahoitettua ydinvoimalaa. Tämä ei
+ 					   maksa suomalaiselle veronmaksajalle mitään. Päinvastoin, kokonaan yksityisesti rahoitettu ydinvoima tuo vaurautta, työtä, verotuloja
+ 					   ja siten hyvinvointia. Näillä tuloilla voimme maksaa sekä uusiutuvista, että uusiutumattomista energiamuodoista koituvan jättilaskun.
+					   Uusi ydinvoima on myös vanhaa luotettavampaa ja turvallisempaa. Fortumin nykyiset kaksi ydinvoimalaa tulevat elinkaarensa loppuun ensi
+ 				           vuosikymmenen loppuun mennessä. Yksi uusi ydinvoimala nykyaikaisella tekniikalla voisi korvata kaksi vanhaa. Rakennusluvan antaminen
+ 					   suomalaiselle energiayhtiölle siis vähentäisi ydinvoimaloiden määrää Suomessa. 
+					   Haluamme kampanjallamme murtaa yleisiä ennakkoluuloja ydinvoiman turvallisuudesta ihmiselle ja luonnolle. Toisin kuin usein ajatellaan,
+ 					   suomalainen, oikein tuotettu ja valvottu ydinvoima on turvallista ja päästötöntä. Ydinjätteen loppusijoitukselle on Suomessa olemassa
+ 					   suunnitelma, ja laajan peruskalliomme ansiosta loppusijoituspaikat eivät lopu vielä pitkään aikaan. Ydinvoima tuottaa ympäristöönsä
+ 					   vähemmän radioaktiivisia päästöjä kuin hiilivoima, ja roimasti vähemmän kasvihuonepäästöjä.
+					   Me Kokoomusnuorissa haluamme, että suomalainen energiapolitiikka on tulevaisuudessa kestävällä pohjalla sekä ilmaston että energian
+					   omavaraisuuden kannalta. Uuden ydinvoimalan rakentaminen tuo meille niitä rahallisia resursseja, joita tarvitsemme jotta voimme kehittää
+ 					   uusiutuvista energiamuodoista tarpeeksi tehokkaita tulevaisuuden tarpeisiin. Jotta tulevaisuudessa voimme tuottaa energiaa vielä
+ 					   kestävemmillä tavoilla, tarvitsemme ydinvoimaa nyt.</p>										
 				</article>
 				
-				<article id="second" class="blogpost">
+				<article id="blog2" class="blogpost">
 					
 				</article>
 			</section>
 			
 
 			
-			<footer class="footer">
-				<p>Copyright 2017 Kokoomusnuoret</p>
+			<footer id="footer" class="footer">
+				<p id="footertext">Copyright 2017 Kokoomusnuoret</p>
 			</footer>
 		</body>
 	
