--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<head>
 		
 		<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-	    	<meta charset"UFT-8"/>
+	    	<meta charset="UTF-8"/>
 		<meta name="author" content="Liisi Korvenranta"/>
 		<meta name="description" content="Kampanjasivut"/>
-		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"/>
 		<link rel="shortcut icon" href="favicon.ico"/> 
 		<title> Ydinvoiman puolesta </title>
-		<link rel = "stylesheet" type="text/css" href="stylesheet.css">
+		<link rel = "stylesheet" type="text/css" href="stylesheet.css"/>
+	
 		
 	</head>
 	
@@ -21,16 +22,16 @@
 					<li><a href="#home">HOME</a> </li>
 					<li><a href="#info">INFO</a> </li>
 					<li><a href="#blog1">BLOG</a> </li>
-					<li><a href="#footer">CONTACT</a> </li>
+					<li><a href="#contacttext">CONTACT</a> </li>
 				</ul>	
 			</nav>
 		
 			<header class="title">
-				<img id="home" class="resize" src="tree.jpg" >
-				<img id="info" class="resize" src="lights1.jpg">
+				<img id="home" class="resize" src="tree.jpg" >		
 			</header>
 			
 			<section>
+				<img id="info" class="resize" src="lights1.jpg">
 				<article id="blog1" class="blogpost">
 					<h2>Miksi Ydinvoima?</h2>
 					<p> Kokoomusnuorten lähtökohtainen tavoite on tuottaa kotimaista päästötöntä ydinvoimaa ilmastoa
@@ -51,15 +52,17 @@
  					   kestävemmillä tavoilla, tarvitsemme ydinvoimaa nyt.</p>										
 				</article>
 				
-				<article id="blog2" class="blogpost">
-					
+				<article id="contact" class="blogpost">
+					<h3>Ota yhteyttä!</h3>
+					<p id="contacttext">kokoomusnuoret@gmail.com <br> +358503509617 </p>
+
 				</article>
 			</section>
 			
 
 			
 			<footer id="footer" class="footer">
-				<p id="footertext">Copyright 2017 Kokoomusnuoret</p>
+				<p id="footertext">Liisi Korvenranta Copyright 2017 Kokoomusnuoret</p>
 			</footer>
 		</body>
 	
