--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	    	<meta charset="UTF-8"/>
 		<meta name="author" content="Liisi Korvenranta"/>
 		<meta name="description" content="Kampanjasivut"/>
+		<meta name= "viewport" content="width=device-width, initial-scale=1.0"/>
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"/>
 		<link rel="shortcut icon" href="favicon.ico"/> 
 		<title> Ydinvoiman puolesta </title>
