--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<meta name="author" content="Liisi Korvenranta"/>
 		<meta name="description" content="Kampanjasivut"/>
 		<meta name= "viewport" content="width=device-width, initial-scale=1.0"/>
-		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"/>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300&amp;subset=latin-ext" rel="stylesheet">
 		<link rel="shortcut icon" href="favicon.ico"/> 
 		<title> Ydinvoiman puolesta </title>
 		<link rel = "stylesheet" type="text/css" href="stylesheet.css"/>
-	
+		<link rel = "stylesheet" type="text/css" href="normalize.css"/>
 		
 	</head>
 	
@@ -35,26 +35,26 @@
 				<img id="info" class="resize" src="lights1.jpg">
 				<article id="blog1" class="blogpost">
 					<h2>Miksi Ydinvoima?</h2>
-					<p> Kokoomusnuorten lähtökohtainen tavoite on tuottaa kotimaista päästötöntä ydinvoimaa ilmastoa
- 					   saastuttavien fossiilisten polttoaineiden sijaan. Haluamme täten päästä eroon Venäjän tuontiriippuvuudesta ja ilmastoa saastuttavista
- 					   energiamuodoista. Tämän tavoitteen saavuttamiseksi Suomeen tulee rakentaa kaksi uutta yksityisesti rahoitettua ydinvoimalaa. Tämä ei
- 					   maksa suomalaiselle veronmaksajalle mitään. Päinvastoin, kokonaan yksityisesti rahoitettu ydinvoima tuo vaurautta, työtä, verotuloja
- 					   ja siten hyvinvointia. Näillä tuloilla voimme maksaa sekä uusiutuvista, että uusiutumattomista energiamuodoista koituvan jättilaskun.
-					   Uusi ydinvoima on myös vanhaa luotettavampaa ja turvallisempaa. Fortumin nykyiset kaksi ydinvoimalaa tulevat elinkaarensa loppuun ensi
- 				           vuosikymmenen loppuun mennessä. Yksi uusi ydinvoimala nykyaikaisella tekniikalla voisi korvata kaksi vanhaa. Rakennusluvan antaminen
- 					   suomalaiselle energiayhtiölle siis vähentäisi ydinvoimaloiden määrää Suomessa. 
-					   Haluamme kampanjallamme murtaa yleisiä ennakkoluuloja ydinvoiman turvallisuudesta ihmiselle ja luonnolle. Toisin kuin usein ajatellaan,
- 					   suomalainen, oikein tuotettu ja valvottu ydinvoima on turvallista ja päästötöntä. Ydinjätteen loppusijoitukselle on Suomessa olemassa
- 					   suunnitelma, ja laajan peruskalliomme ansiosta loppusijoituspaikat eivät lopu vielä pitkään aikaan. Ydinvoima tuottaa ympäristöönsä
- 					   vähemmän radioaktiivisia päästöjä kuin hiilivoima, ja roimasti vähemmän kasvihuonepäästöjä.
-					   Me Kokoomusnuorissa haluamme, että suomalainen energiapolitiikka on tulevaisuudessa kestävällä pohjalla sekä ilmaston että energian
-					   omavaraisuuden kannalta. Uuden ydinvoimalan rakentaminen tuo meille niitä rahallisia resursseja, joita tarvitsemme jotta voimme kehittää
- 					   uusiutuvista energiamuodoista tarpeeksi tehokkaita tulevaisuuden tarpeisiin. Jotta tulevaisuudessa voimme tuottaa energiaa vielä
- 					   kestävemmillä tavoilla, tarvitsemme ydinvoimaa nyt.</p>										
+					<p> Kokoomusnuorten lahtokohtainen tavoite on tuottaa kotimaista paastotonta ydinvoimaa ilmastoa
+ 					   saastuttavien fossiilisten polttoaineiden sijaan. Haluamme taten paasta eroon Venajan tuontiriippuvuudesta ja ilmastoa saastuttavista
+ 					   energiamuodoista. Taman tavoitteen saavuttamiseksi Suomeen tulee rakentaa kaksi uutta yksityisesti rahoitettua ydinvoimalaa. Tama ei
+ 					   maksa suomalaiselle veronmaksajalle mitaan. Painvastoin, kokonaan yksityisesti rahoitettu ydinvoima tuo vaurautta, tyota, verotuloja
+ 					   ja siten hyvinvointia. Nailla tuloilla voimme maksaa seka uusiutuvista, etta uusiutumattomista energiamuodoista koituvan jattilaskun.
+					   Uusi ydinvoima on myos vanhaa luotettavampaa ja turvallisempaa. Fortumin nykyiset kaksi ydinvoimalaa tulevat elinkaarensa loppuun ensi
+ 				           vuosikymmenen loppuun mennessa. Yksi uusi ydinvoimala nykyaikaisella tekniikalla voisi korvata kaksi vanhaa. Rakennusluvan antaminen
+ 					   suomalaiselle energiayhtiolle siis vahentaisi ydinvoimaloiden maaraa Suomessa. 
+					   Haluamme kampanjallamme murtaa yleisia ennakkoluuloja ydinvoiman turvallisuudesta ihmiselle ja luonnolle. Toisin kuin usein ajatellaan,
+ 					   suomalainen, oikein tuotettu ja valvottu ydinvoima on turvallista ja paastotonta. Ydinjatteen loppusijoitukselle on Suomessa olemassa
+ 					   suunnitelma, ja laajan peruskalliomme ansiosta loppusijoituspaikat eivat lopu viela pitkaan aikaan. Ydinvoima tuottaa ymparistoonsa
+ 					   vahemman radioaktiivisia paastoja kuin hiilivoima, ja roimasti vahemman kasvihuonepaastoja.
+					   Me Kokoomusnuorissa haluamme, etta suomalainen energiapolitiikka on tulevaisuudessa kestavalla pohjalla seka ilmaston etta energian
+					   omavaraisuuden kannalta. Uuden ydinvoimalan rakentaminen tuo meille niita rahallisia resursseja, joita tarvitsemme jotta voimme kehittaa
+ 					   uusiutuvista energiamuodoista tarpeeksi tehokkaita tulevaisuuden tarpeisiin. Jotta tulevaisuudessa voimme tuottaa energiaa viela
+ 					   kestavemmilla tavoilla, tarvitsemme ydinvoimaa nyt.</p>										
 				</article>
 				
 				<article id="contact" class="blogpost">
-					<h3>Ota yhteyttä!</h3>
+					<h3>Ota yhteytta!</h3>
 					<p id="contacttext">kokoomusnuoret@gmail.com <br> +358503509617 </p>
 
 				</article>
