--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="Liisi Korvenranta"/>
 		<meta name="description" content="Kampanjasivut"/>
 		<meta name= "viewport" content="width=device-width, initial-scale=1.0"/>
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300&amp;subset=latin-ext" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<link rel="shortcut icon" href="favicon.ico"/> 
 		<title> Ydinvoiman puolesta </title>
 		<link rel = "stylesheet" type="text/css" href="stylesheet.css"/>
@@ -56,13 +56,11 @@
 				<article id="contact" class="blogpost">
 					<h3>Ota yhteytta!</h3>
 					<p id="contacttext">kokoomusnuoret@gmail.com <br> +358503509617 </p>
-
+					<img id="logo" src="logo.jpg">
 				</article>
 			</section>
-			
 
-			
-			<footer id="footer" class="footer">
+		<footer id="footer" class="footer">
 				<p id="footertext">Liisi Korvenranta Copyright 2017 Kokoomusnuoret</p>
 			</footer>
 		</body>
