--- a/index.html
+++ b/index.html
@@ -35,8 +35,15 @@
 			</header>
 			
 			<section>
+                
+                <video class="resize" width="640" height="360" controls poster="prtsc.png">
+                    <source src="vjp_video.mp4" type="video/mp4">
+	                <source src="vjp_video.webm" type="video/webm">
+                    <source src="vjp_video.ogv" type="video/ogg">
+                    <source src="vjp_video.mpg" type="video/mpg">
+                </video>
 				<img id="info" class="resize" src="lights1.jpg">
-				<article id="uutisikkuna" class="blogpost">
+				<article id="uutisikkuna" class="blogpost" >
                     <div id="otsikko"></div>
                     <div id="pvm"></div>
                     <div id="sisältö"></div>       
