--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 		              <img alt="YDINVOIMAVIDEO" src="prtsc.png" width="640" height="360" title="No video playback capabilities, please download the video below" />
 	               </object>
                 </video>
+                <p id="download">Download Video:
+	               Closed Format:	<a href="vjp_video.mp4">"MP4"</a>
+	               Open Format:	<a href="vjp_video.ogv">"Ogg"</a>
+                </p>
                 
 				<img id="info" class="resize" src="lights1.jpg">
 				<article id="uutisikkuna" class="blogpost" >
