--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 					<li><a href="#info">INFO</a> </li>
 					<li><a href="#blog1">BLOG</a> </li>
 					<li><a href="#contacttext">CONTACT</a> </li>
+                    <li><a href="game.html">GAME</a> </li>
 				</ul>	
 			</nav>
 		
