--- a/game2.html
+++ b/game2.html
@@ -1,11 +1,13 @@
 <html>
     <head>
-        <title>Game</title>
+        <title>Game2</title>
         <script 
             src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous">
         </script>
+        <script src="phaser.js"></script>
+        <script src="animation2.js"></script>
     </head>
     <body>
         
