--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="slideshow.js"></script>
-        <script src="canvas.js"></script>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
 	    <meta charset="UTF-8"/>
 		<meta name="author" content="Liisi Korvenranta"/>
@@ -28,8 +27,7 @@
 					<li><a href="#info">INFO</a> </li>
 					<li><a href="#blog1">BLOG</a> </li>
 					<li><a href="#contacttext">CONTACT</a> </li>
-                    <li><a href="game.html">"GAME"</a> </li>
-                    <li><a href="game2.html">GAME 2</a> </li>
+                    <li><a href="game2.html">GAME</a> </li>
 				</ul>	
 			</nav>
 		
@@ -56,9 +54,6 @@
 	               Closed Format:	<a href="vjp_video.mp4">"MP4"</a>
 	               Open Format:	<a href="vjp_video.ogv">"Ogg"</a>
                 </p>
-                <div>
-                    <canvas id="c" class="resize"></canvas>
-                </div>
 				<img id="info" class="resize" src="lights1.jpg">
 				<article id="uutisikkuna" class="blogpost" >
                     <div id="otsikko"></div>
