--- a/game2.html
+++ b/game2.html
@@ -6,8 +6,24 @@
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous">
         </script>
+		
+    		<script src="states/boot.js"></script>
+		<script src="states//preload.js"></script>
+		<script src="states//gametitle.js"></script>
+		<script src="states//thegame.js"></script>
+		<script src="states//gameover.js"></script>	
         <script src="phaser.js"></script>
-        <script src="animation2.js"></script>
+		<script>
+			(function() {
+				var game = new Phaser.Game(320, 480, Phaser.CANVAS, "game");
+				game.state.add("Boot",boot);
+				game.state.add("Preload",preload);
+				game.state.add("GameTitle",gameTitle);
+				game.state.add("TheGame",theGame);
+				game.state.add("GameOver",gameOver);
+				game.state.start("Boot");
+			})();    
+		</script>
     </head>
     <body>
         
