--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<li><a href="#contacttext">CONTACT</a></li>
                     <li><a href="game.html">TESTGAME</a></li>
                     <li><a href="game2.html">GAME</a></li>
+                    <!-- lsjlakjdlkdj -->
 				</ul>	
 			</nav>
 		
