its done its over

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 <li><a href="#home">HOME</a></li>
 				<li><a href="#info">INFO</a></li>
 				<li><a href="#blogtitle">BLOG</a></li>
-				<li><a href="#contacttext">CONTACT</a></li>
+                <li><a href="#v">VIDEO</a></li>
+				<li><a href="#footer">CONTACT</a></li>
                 <!--<li><a href="game.html">TESTGAME</a></li>-->
                 <li><a href="game2.html">GAME</a></li>
             </ul>	
@@ -58,7 +59,7 @@
         
         <section class="ratkaisut">
             <article class="r" id="lisää">
-                <p>LISÄTA KOTIMAISTA YDINVOIMAA</p>
+                <p>LISÄTÄ KOTIMAISTA YDINVOIMAA</p>
             </article>
 
             <article class="r">    
@@ -134,11 +135,11 @@
             </article>
 
             <article class="s">
-               <img src="twitter.png" id="twitter">
+                <a href="https://twitter.com/"><img src="twitter.png" id="twitter"> </a>
             </article>
 
             <article class="s">
-                <img src="ig.png" id="ig">
+                <a href="https://instagram.com"><img src="ig.png" id="ig"></a>
             </article>  
         </section>
                 
