--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                 <li><a href="#v">VIDEO</a></li>
 				<li><a href="#blogtitle">BLOG</a></li> 
 				<li><a href="#footer">CONTACT</a></li>
-                <!--<li><a href="game.html">TESTGAME</a></li>-->
                 <li><a href="game2.html">GAME</a></li>
             </ul>	
         </nav>
@@ -106,6 +105,7 @@
         
         <article id="blogi">
             <p id="blogtitle">BLOGI</p>
+            <p id="date">17.3.2017</p>
             <p id="blogiteksti">
                 Kokoomusnuorten lähtökohtainen tavoite on tuottaa kotimaista päästötöntä ydinvoimaa ilmastoa saastuttavien fossiilisten polttoaineiden sijaan. Haluamme täten päästä eroon Venäjän tuontiriippuvuudesta ja ilmastoa saastuttavista energiamuodoista. Tämän tavoitteen saavuttamiseksi Suomeen tulee rakentaa kaksi uutta yksityisesti rahoitettua ydinvoimalaa. Tämä ei maksa suomalaiselle veronmaksajalle mitään. Päinvastoin, kokonaan yksityisesti rahoitettu ydinvoima tuo vaurautta, työtä, verotuloja ja siten hyvinvointia. Näillä tuloilla voimme maksaa sekä uusiutuvista, että uusiutumattomista energiamuodoista koituvan jättilaskun.
                     <br><br>
